fix spacing and scrolling

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -21,9 +21,6 @@
     text-transform: uppercase;
     transition: all ease .35s;
 }
-#about{
-    
-}
 .copyright-box a{
     color:white;
 }
